# Conversor-de-Moedas

./: .gitignore  README.md  main.py  pyproject.toml
static/: index.js
templates/: index.html
