[tool.poetry]
name = "conversor-moedas"
version = "0.1.0"
description = ""
authors = ["SilasAlvesTi <silas.ifce.ti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
Jinja2 = "^3.1.2"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
